# kaggle-cmi-piu

./: .gitignore  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  run.py
cmipiu/: __init__.py  cleaning.py  common.py  config.py  engine.py  features.py  flows.py  metrics.py  predict.py  train.py
cmipiu/api/: flows.py
cmipiu/config/: __init__.py  hyperparams.py
cmipiu/data/: features.py  ingest.py  transformation.py
cmipiu/engine/: engine.py  ensemble.py  metrics.py  pipeline.py  predict.py  train.py
cmipiu/flows/: _common.py  flows.py  predict_sii.py  prepare_test_data.py  prepare_train_data.py  train_autoencoder_ensemble.py  train_ml_models.py
cmipiu/models/: autoencoder.py  ensemble.py
cmipiu/src/config/: __init__.py  hyperparams.py
cmipiu/src/data/: clean.py  features.py  ingest.py  transformation.py
cmipiu/src/engine/: engine.py  metrics.py  pipeline.py  predict.py  train.py
cmipiu/src/pipeline/: training.py
cmipiu/tuning/: tune_lgbm_reg.py
cmipiu/utils/: paths.py  plots.py
config/: train.yaml
config/autoencoder_ensemble/: optuna_with_pciat.yaml  optuna_with_sii.yaml  pciat.yaml  sii.yaml
config/naive_ensemble/: default.yaml  sii.yaml
config/plain_ensemble/: optuna_with_pciat.yaml  optuna_with_sii.yaml  pciat.yaml  sii.yaml
docs/: flow.md  notebooks.md
notebooks/: 0.01-hm-missing-values.ipynb  0.01-hm-tabular-data.ipynb  0.02-hm-parquet-data.ipynb  1.02-hm-combine-data.ipynb  1.04-hm-pqdata-aggregates.ipynb  2.01-hm-lgbm-on-combined-features.ipynb
