[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cmipiu"
version = "0.0.1"
description = "My submission for Kaggle competition Child Mind Institute — Problematic Internet Use"
authors = [
  {name = "Himanshu Mittal"},
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"
